[gd_scene load_steps=2 format=3 uid="uid://pd0j3tyabv5k"]

[ext_resource type="Script" uid="uid://bs5y5d5gmaxfc" path="res://content_pack_manager/content_pack_line_widget.gd" id="1_ifi48"]

[node name="ContentPackLineWidget" type="HBoxContainer"]
offset_right = 490.0
offset_bottom = 31.0
size_flags_horizontal = 3
script = ExtResource("1_ifi48")

[node name="CheckButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Content Name"

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="YeetButton" type="Button" parent="."]
layout_mode = 2
text = " X "

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="YeetButton" to="." method="_on_yeet_button_pressed"]
